原型设计:插入和删除行，Datagrid数据环境链接到ObservableCollection

--- a/SilverTest/SilverTest/SilverTest.csproj
+++ b/SilverTest/SilverTest/SilverTest.csproj
@@ -74,6 +74,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DataDB.cs" />
+    <Compile Include="libs\Utility.cs" />
     <Compile Include="Requirement.cs" />
     <Compile Include="WelcomeYou.xaml.cs">
       <DependentUpon>WelcomeYou.xaml</DependentUpon>
@@ -146,7 +147,9 @@
     <Resource Include="images\print.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="resources\NewTestTarget_Table.xml" />
+    <Resource Include="resources\NewTestTarget_Table.xml">
+      <SubType>Designer</SubType>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="resources\StandardSamples_Table.xml" />
