原型设计: 保存datagrid到xml。 xml数据源删除xmldataprodvier,改为从xml文件中读取

--- a/SilverTest/SilverTest/SilverTest.csproj
+++ b/SilverTest/SilverTest/SilverTest.csproj
@@ -147,12 +147,12 @@
     <Resource Include="images\print.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="resources\NewTestTarget_Table.xml">
+    <AdditionalFiles Include="resources\NewTestTarget_Table.xml">
       <SubType>Designer</SubType>
-    </Resource>
+    </AdditionalFiles>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="resources\StandardSamples_Table.xml" />
+    <AdditionalFiles Include="resources\StandardSamples_Table.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
