--- a/SilverTest/SilverTest/packages.config
+++ b/SilverTest/SilverTest/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net461" />
   <package id="System.Reactive" version="3.1.1" targetFramework="net461" />
   <package id="System.Reactive.Core" version="3.1.1" targetFramework="net461" />
   <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net461" />
