--- a/SilverTest/SilverTest/SilverTest.csproj
+++ b/SilverTest/SilverTest/SilverTest.csproj
@@ -163,5 +163,8 @@
       <SubType>Designer</SubType>
     </AdditionalFiles>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="实际数据.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
