--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ obj/
 
 #ignore all files in release directory
 Release/
+
+/SilverTest/SilverTest/bin/Debug/resources/NewTestTarget_Table.xml
+/SilverTest/SilverTest/bin/Debug/resources/StandardSamples_Table.xml
