功能实现:DataFormater, PhyCombine类草案

--- a/SilverTest/SilverTest/SilverTest.csproj
+++ b/SilverTest/SilverTest/SilverTest.csproj
@@ -81,6 +81,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DataDB.cs" />
+    <Compile Include="libs\DataFormater.cs" />
+    <Compile Include="libs\PhyCombine.cs" />
+    <Compile Include="libs\SerialDriver.cs" />
     <Compile Include="libs\Utility.cs" />
     <Compile Include="Requirement.cs" />
     <Compile Include="WelcomeYou.xaml.cs">
