串口数据解析功能框架完成，未运行，未调试

--- a/SilverTest/SilverTest/SilverTest.csproj
+++ b/SilverTest/SilverTest/SilverTest.csproj
@@ -82,7 +82,9 @@
     </ApplicationDefinition>
     <Compile Include="DataDB.cs" />
     <Compile Include="libs\DataFormater.cs" />
+    <Compile Include="libs\DotManager.cs" />
     <Compile Include="libs\PhyCombine.cs" />
+    <Compile Include="libs\ProduceFakeData.cs" />
     <Compile Include="libs\SerialDriver.cs" />
     <Compile Include="libs\Utility.cs" />
     <Compile Include="Requirement.cs" />
