--- a/SilverTest/SilverTest/packages.config
+++ b/SilverTest/SilverTest/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DynamicDataDisplay" version="0.3.0.1" targetFramework="net461" />
+  <package id="MathNet.Numerics" version="4.5.1" targetFramework="net461" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net461" />
   <package id="System.Reactive" version="3.1.1" targetFramework="net461" />
   <package id="System.Reactive.Core" version="3.1.1" targetFramework="net461" />
