控制面板按modbus格式发送命令

--- a/SilverTest/SilverTest/packages.config
+++ b/SilverTest/SilverTest/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="byMarc.Net2.Library.Crc" version="2017.216.0" targetFramework="net461" />
   <package id="DynamicDataDisplay" version="0.3.0.1" targetFramework="net461" />
   <package id="EasyEncryption" version="1.0.2" targetFramework="net461" />
   <package id="MathNet.Numerics" version="4.5.1" targetFramework="net461" />
