--- a/BasicWaveChart/BasicWaveChart/BasicWaveChart/BasicWaveChart.csproj
+++ b/BasicWaveChart/BasicWaveChart/BasicWaveChart/BasicWaveChart.csproj
@@ -48,7 +48,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="widget\DrawingCanvas.cs" />
+    <Compile Include="widget\OptimizeCanvas.cs" />
     <Compile Include="widget\SomeType.cs" />
     <Compile Include="widget\XAxisCtl.cs" />
     <Compile Include="widget\YAxisCtl.cs" />
