basicwave中加入handle，可以自由移动

--- a/BasicWaveChart/BasicWaveChart/BasicWaveChart/BasicWaveChart.csproj
+++ b/BasicWaveChart/BasicWaveChart/BasicWaveChart/BasicWaveChart.csproj
@@ -90,7 +90,9 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Resource Include="Feature\integral\images\pillar.png" />
+    <Resource Include="Feature\integral\images\pillar.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
