面积积分绘图架子搭建

--- a/BasicWaveChart/BasicWaveChart/BasicWaveChart/BasicWaveChart.csproj
+++ b/BasicWaveChart/BasicWaveChart/BasicWaveChart/BasicWaveChart.csproj
@@ -48,6 +48,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Feature\basic\IMoveFeature.cs" />
     <Compile Include="Feature\basic\MoveFeature.cs" />
     <Compile Include="Feature\integral\HandlerCtl.cs" />
     <Compile Include="Feature\integral\IntegralFeature.cs" />
