--- a/BasicWaveChart/BasicWaveChart/BasicWaveChart/BasicWaveChart.csproj
+++ b/BasicWaveChart/BasicWaveChart/BasicWaveChart/BasicWaveChart.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Feature\basic\MoveFeature.cs" />
     <Compile Include="Feature\integral\HandlerCtl.cs" />
     <Compile Include="Feature\integral\IntegralFeature.cs" />
+    <Compile Include="widget\MarkLine.cs" />
     <Compile Include="widget\OptimizeCanvas.cs" />
     <Compile Include="widget\SomeType.cs" />
     <Compile Include="widget\XAxisCtl.cs" />
