--- a/SilverTest/SilverTest/SilverTest.csproj
+++ b/SilverTest/SilverTest/SilverTest.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BasicWaveChart">
+      <HintPath>..\..\BasicWaveChart\BasicWaveChart\BasicWaveChart\bin\Debug\BasicWaveChart.dll</HintPath>
+    </Reference>
     <Reference Include="byMarc.Net2.Library.Crc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=5ee42ada736ab19b, processorArchitecture=MSIL">
       <HintPath>..\packages\byMarc.Net2.Library.Crc.2017.216.0\lib\net20\byMarc.Net2.Library.Crc.dll</HintPath>
     </Reference>
