--- a/SilverTest/SilverTest/packages.config
+++ b/SilverTest/SilverTest/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net461" />
   <package id="EasyEncryption" version="1.0.2" targetFramework="net461" />
-  <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
-  <package id="MaterialDesignThemes" version="2.5.0.1205" targetFramework="net461" />
+  <package id="MahApps.Metro" version="1.6.5" targetFramework="net461" />
+  <package id="MahApps.Metro.IconPacks" version="2.3.0" targetFramework="net461" />
   <package id="MathNet.Numerics" version="4.5.1" targetFramework="net461" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net461" />
   <package id="System.Reactive" version="3.1.1" targetFramework="net461" />
