美化usb设置，数据修改，登陆窗口

--- a/SilverTest/SilverTest/SilverTest.csproj
+++ b/SilverTest/SilverTest/SilverTest.csproj
@@ -261,5 +261,8 @@
   <ItemGroup>
     <Resource Include="images\test.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\write.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
