--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,10 @@ BasicWaveChart/BasicWaveChart/test/bin/Debug/BasicWaveChart.pdb
 BasicWaveChart/BasicWaveChart/test/bin/Debug/test.exe
 BasicWaveChart/BasicWaveChart/test/bin/Debug/test.pdb
 
+SilverTest/SerialPortLab/bin/Debug/SerialPortLab.exe
+SilverTest/SerialPortLab/bin/Debug/SerialPortLab.pdb
+
+
 SilverTest/SilverTest/bin/Debug/BasicWaveChart.dll
 SilverTest/SilverTest/bin/Debug/BasicWaveChart.pdb
 SilverTest/SilverTest/bin/Debug/QM201H.exe
@@ -30,6 +34,9 @@ SilverTest/SilverTest/bin/Debug/QM201H.exe.config
 SilverTest/SilverTest/bin/Debug/QM201H.pdb
 SilverTest/SilverTest/bin/Debug/history/
 SilverTest/SilverTest/bin/Debug/changelog/
+SilverTest/SilverTest/bin/Debug/resources/NewTestTarget_Table.xml
+SilverTest/SilverTest/bin/Debug/resources/StandardSamples_Table.xml
+
 
 SilverTest/SilverTest/bin/Debug/NModbus4.Serial.dll
 SilverTest/SilverTest/bin/Debug/NModbus4.dll
