--- a/SilverTest/SilverTest/SilverTest.csproj
+++ b/SilverTest/SilverTest/SilverTest.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{8F791C00-2188-499D-BBB2-5F9F5513E0F3}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>SilverTest</RootNamespace>
-    <AssemblyName>QM201H</AssemblyName>
+    <AssemblyName>QM208B</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
