--- a/SilverTest/BasicWaveChart/BasicWaveChart.csproj
+++ b/SilverTest/BasicWaveChart/BasicWaveChart.csproj
@@ -48,6 +48,9 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EnlargeInfo_uwnd.xaml.cs">
+      <DependentUpon>EnlargeInfo_uwnd.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Feature\basic\IMoveFeature.cs" />
     <Compile Include="Feature\basic\MoveFeature.cs" />
     <Compile Include="Feature\integral\HandlerCtl.cs" />
@@ -66,6 +69,10 @@
       <DependentUpon>BasicWaveChartUC.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="EnlargeInfo_uwnd.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
