fix bug: 相关系数图滚动

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,13 @@
 Thumbs.db
 #ignore all files in release directory
 
+
+
 SilverTest/SerialPortLab/bin/Debug/clip.txt
 SilverTest/SerialPortLab/bin/Debug/实际数据.txt
-
 SilverTest/test/bin
 
 
+obj
+obj
+obj
