--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-#ignore obj
+﻿#ignore obj
 #ignore visual studio generated file
 *.tmp
 Thumbs.db
@@ -6,3 +6,5 @@ Thumbs.db
 
 SilverTest/SerialPortLab/bin/Debug/clip.txt
 SilverTest/SerialPortLab/bin/Debug/实际数据.txt
+obj/
+debug/
